tests/out/error/type/unknown.in.bt
struct FieldTypes {
	a Bar
	b []Bar
}

// fun params
fun foo (y MyType) {

	// casting
	x := 1 as u7
}
