tests/out/error/type/unknown.out
tests/out/error/type/unknown.in.bt:2:2 error: unknown type Bar
tests/out/error/type/unknown.in.bt:3:2 error: unknown type Bar
tests/out/error/type/unknown.in.bt:7:10 error: unknown type MyType
tests/out/error/type/unknown.in.bt:10:9 error: unknown type u7
